--- a/ttx/package.json
+++ b/ttx/package.json
@@ -1,37 +1,35 @@
 {
-  "name": "txx",
+  "name": "ttx",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "serve": "yarn test",
+    "serve": "npm run dev",
     "dev": "vite",
-    "test": "cross-env NODE_ENV=test vite",
-    "build": "vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
-    "cross-env": "^7.0.3",
-    "dayjs": "^1.11.7",
-    "dotenv": "^16.0.3",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.3",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.0",
+    "reactivity": "^2.4.1",
+    "tailwindcss": "^3.3.1",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1",
     "vfonts": "^0.0.3",
     "vicons": "^0.0.1",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.2.0"
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0",
+    "vue-tsc": "^1.2.0"
   }
 }
