--- a/ttx/package.json
+++ b/ttx/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.3",
     "pinia": "^2.0.33",
@@ -25,6 +26,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
