--- a/ttx/tsconfig.json
+++ b/ttx/tsconfig.json
@@ -52,10 +52,23 @@
     }
   },
   // 指定需要编译的文件，否则默认当前目录下除了exclude之外的所有.ts, .d.ts,.tsx 文件
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+    "tests/**/*.ts",
+    "src/**/*.ts",
+    "modules/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "types/**/*.d.ts",
+    "types/**/*.ts",
+    "build/**/*.ts",
+    "build/**/*.d.ts",
+    "mock/**/*.ts",
+    "vite.config.ts"
+  ],
   // 指定不需要编译的文件
   "exclude": ["node_modules", "tests/server/**/*.ts", "dist", "**/*.js"],
-  
+
   "references": [{
     "path": "./tsconfig.node.json"
   }]
