--- a/ttx/.env.development
+++ b/ttx/.env.development
@@ -5,7 +5,7 @@ VITE_PORT = 8001
 VITE_PUBLIC_PATH = /
 
 # 是否开启mock
-VITE_USE_MOCK = false
+VITE_USE_MOCK = true
 
 # 网站前缀
 VITE_BASE_URL = /
@@ -16,7 +16,7 @@ VITE_DROP_CONSOLE = true
 # 跨域代理，可以配置多个，请注意不要换行
 # VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
 # VITE_PROXY=[["/api","http://172.16.10.135:8888"]]
-VITE_PROXY=[["/api","http//10.40.38.73:8801"]]
+VITE_PROXY=[["/api","http//10.40.38.73:8801/api"]]
 
 # API 接口地址
 VITE_GLOB_API_URL ="/api"
