--- a/ttx/tsconfig.json
+++ b/ttx/tsconfig.json
@@ -49,7 +49,11 @@
       "/@/*": ["src/*"],
       "/#/*": ["types/*"],
       "/domain/*": ["src/modules/*"]
-    }
+    },
+    "typeRoots": [
+      "./node_modules/@types/",
+      "./types"
+    ]
   },
   // 指定需要编译的文件，否则默认当前目录下除了exclude之外的所有.ts, .d.ts,.tsx 文件
   "include": [
