--- a/ttx/package.json
+++ b/ttx/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vicons/antd": "^0.12.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "less": "^4.1.3",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.3",
     "pinia": "^2.0.33",
