--- a/ttx/package.json
+++ b/ttx/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vicons/antd": "^0.12.0",
+    "@vueuse/core": "^10.0.2",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "less": "^4.1.3",
