--- a/ttx/tsconfig.node.json
+++ b/ttx/tsconfig.node.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+"target": "es2017",
+"target": "es2017",
+"target": "es2017",
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
